# SysProbe

./: CROSS_COMPILE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.windows  LICENSE  README.md  docker-windows-test.bat  docker-windows-test.sh
src/: cli.rs  main.rs  mock_collector.rs  models.rs  utils.rs
src/collector/: cpu.rs  device.rs  disk.rs  http.rs  memory.rs  mod.rs  network.rs  os.rs  tally.rs
